fix code analysis issue