@@ -648,13 +648,13 @@ public class RuntimeTests {
 
             assertEquals(2, allRecords.size());
             // now see if the domain event and state are encrypted
-            assertTrue(allRecords.get(1) instanceof DomainEventRecord);
+            assertInstanceOf(DomainEventRecord.class, allRecords.get(1));
             DomainEventRecord domainEventRecord = (DomainEventRecord) allRecords.get(1);
             AccountCreatedEvent accountCreatedEvent = objectMapper.readValue(domainEventRecord.payload(), AccountCreatedEvent.class);
             assertNotEquals("Fahim", accountCreatedEvent.firstName());
             assertNotEquals("Zuijderwijk", accountCreatedEvent.lastName());
             assertNotEquals("FahimZuijderwijk@jourrapide.com", accountCreatedEvent.email());
-            AggregateStateRecord stateRecord = (AggregateStateRecord) allRecords.get(0);
+            AggregateStateRecord stateRecord = (AggregateStateRecord) allRecords.getFirst();
             AccountState accountState = objectMapper.readValue(stateRecord.payload(), AccountState.class);
             assertNotEquals("Fahim", accountState.firstName());
             assertNotEquals("Zuijderwijk", accountState.lastName());
